--- a/src/main/resources/templates/hello-form-screen.html
+++ b/src/main/resources/templates/hello-form-screen.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="hello/form-post-handle" method="post">
+<form action="form-post-handle2" method="post">
     <label> Form-Screan
         <p>이름: </p><input name="name" type="text">
         <p>이메일: </p><input name="email" type="text">
