--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -5,6 +5,33 @@
     <title>Member-list</title>
 </head>
 <body>
+<table>
+    <thead>
+        <tr>
+            <th>이름</th>
+            <th>이메일</th>
+            <th>비밀번호</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>세종</th>
+            <th>세종@naver.com</th>
+            <th>1234</th>
+        </tr>
+        <tr>
+            <th>종현</th>
+            <th>종현@naver.com</th>
+            <th>1155123</th>
+        </tr>
+        <tr>
+            <th>보영</th>
+            <th>보영@naver.com</th>
+            <th>91913234</th>
+        </tr>
+    </tbody>
+</table>
+
 
 </body>
 </html>
