--- a/src/main/resources/templates/member/member-create.html
+++ b/src/main/resources/templates/member/member-create.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Member-create</title>
 </head>
 <body>
+<div th:replace="member/header :: headerFragment"></div>
 <form action="/member/create" method="post">
     <label> for Member create
         <p>이름 : </p><input name="name" type="text">
