--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -6,6 +6,7 @@
     <title>Member-list</title>
 </head>
 <body>
+<div th:replace="member/header :: headerFragment"></div>
 <table>
     <thead>
         <tr>
