--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -19,7 +19,10 @@
         <tr th:each = "memberResDto : ${memberList}">
             <td th:text = "${memberResDto.name}"></td>
             <td th:text = "${memberResDto.email}"></td>
-            <td th:text = "${memberResDto.password}"></td>
+<!--            <td th:text = "${memberResDto.password}"></td>-->
+<!--            member?id=xx 벙삭욿 요청   -->
+<!--            @는 타임 링크의 url 표현식  -->
+            <td><a th:href="@{/member/find(id=${memberResDto.id})}">상세보기</a></td>
         </tr>
     </tbody>
 </table>
