--- a/src/main/resources/templates/member/header.html
+++ b/src/main/resources/templates/member/header.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
+
 </head>
 <body>
-    <div th:fragment="headerFragment">
-        <a href="/member/create" >회원등록</a>
-        <a href="/members" >회원조회</a>
+    <div th:fragment="headerFragment" style="padding: 20px;
+                background-color:lightgray">
+
+        <a style="padding: 10px;
+        text-decoration: none;
+        font-weight: bold;"
+           href="/member/create" >회원등록</a>
+
+        <a style="padding: 10px;
+         text-decoration: none;
+        font-weight: bold;"
+           href="/members" >회원조회</a>
+
     </div>
 </body>
 </html>
