--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Member-Detail</title>
+    <style>
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+            margin:5px;
+            padding: 20px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding:10px;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="member/header :: headerFragment"></div>
@@ -15,23 +27,16 @@
         <th>가입시간</th>
     </tr>
     </thead>
-    <span th:text="${detail.getName()}"></span>
-    <span th:text="${detail.getEmail()}"></span>
-    <span th:text="${detail.getPassword()}"></span>
-    <span th:text="${detail.getCreate_time()}"></span>
 
     <tbody>
-    <tr th:each = "memberResDto : ${memberList}">
-        <td th:text = "${memberResDto.name}"></td>
-        <td th:text = "${memberResDto.email}"></td>
-        <!--            <td th:text = "${memberResDto.password}"></td>-->
-        <!--            member?id=xx 벙삭욿 요청   -->
-        <!--            @는 타임 링크의 url 표현식  -->
-        <td><a th:href="@{/member/find(id=${memberResDto.id})}">상세보기</a></td>
+    <tr>
+        <td><span th:text="${detail.getName()}"></span></td>
+        <td><span th:text="${detail.getEmail()}"></span></td>
+        <td><span th:text="${detail.getPassword()}"></span></td>
+        <td><span th:text="${detail.getCreate_time()}"></span></td>
     </tr>
     </tbody>
 </table>
-
 
 </body>
 </html>
