--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Member-list</title>
+    <style>
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+            margin:5px;
+            padding: 20px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding:10px;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="member/header :: headerFragment"></div>
@@ -12,7 +24,7 @@
         <tr>
             <th>이름</th>
             <th>이메일</th>
-            <th>비밀번호</th>
+            <th>디테일</th>
         </tr>
     </thead>
     <tbody>
