--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -30,10 +30,18 @@
 
     <tbody>
     <tr>
-        <td><span th:text="${detail.getName()}"></span></td>
-        <td><span th:text="${detail.getEmail()}"></span></td>
-        <td><span th:text="${detail.getPassword()}"></span></td>
-        <td><span th:text="${detail.getCreate_time()}"></span></td>
+        <td>
+            <span th:text="${detail.getName()}"></span>
+        </td>
+        <td>
+            <span th:text="${detail.getEmail()}"></span>
+        </td>
+        <td>
+            <span th:text="${detail.getPassword()}"></span>
+        </td>
+        <td>
+            <span th:text="${detail.getCreate_time()}"></span>
+        </td>
     </tr>
     </tbody>
 </table>
