--- a/src/main/resources/templates/member/header.html
+++ b/src/main/resources/templates/member/header.html
@@ -12,6 +12,11 @@
         <a style="padding: 10px;
         text-decoration: none;
         font-weight: bold;"
+           href="/" >메인화면</a>
+
+        <a style="padding: 10px;
+        text-decoration: none;
+        font-weight: bold;"
            href="/member/create" >회원등록</a>
 
         <a style="padding: 10px;
