--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -24,7 +24,7 @@
         <th>이름</th>
         <th>이메일</th>
         <th>비밀번호</th>
-        <th>가입시간</th>
+        <th>가입일시</th>
     </tr>
     </thead>
 
